[gd_scene load_steps=10 format=2]

[ext_resource path="res://Screens/Template.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/return2.gd" type="Script" id=2]
[ext_resource path="res://Assets/background4.png" type="Texture" id=3]
[ext_resource path="res://Buttons/Jojo_translate1.tscn" type="PackedScene" id=4]
[ext_resource path="res://Neutralfonts/Arvo48.tres" type="DynamicFont" id=5]
[ext_resource path="res://Buttons/Clearbutton.tscn" type="PackedScene" id=6]
[ext_resource path="res://Effects/GeneralTheme.tres" type="Theme" id=7]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="Start" index="0" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Transparentbg1" type="Sprite" parent="ParallaxBackground" index="2"]
position = Vector2( 360, 760 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" parent="CenterContainer" index="0"]
text = "English to ASL"

[node name="Button" parent="CenterContainer/VBoxContainer" index="0"]
focus_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer" index="2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 310.0
margin_right = 656.0
margin_bottom = 343.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/HBoxContainer" index="0"]
margin_left = 122.0
margin_right = 534.0
margin_bottom = 97.0

[node name="Jojo_translate1" parent="CenterContainer/HBoxContainer/VBoxContainer" index="0" instance=ExtResource( 4 )]
margin_top = 0.0
margin_bottom = 97.0
focus_mode = 0
script = null

[node name="Input" type="Label" parent="CenterContainer" index="3"]
margin_top = 130.0
margin_right = 720.0
margin_bottom = 189.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.929412, 0.0823529, 0.313726, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "Input"
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Output" type="Label" parent="CenterContainer" index="4"]
margin_top = 565.0
margin_right = 720.0
margin_bottom = 624.0
rect_rotation = 0.0965917
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.929412, 0.0823529, 0.313726, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "Output"
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Jojo_reset1" parent="CenterContainer" index="5" instance=ExtResource( 6 )]
focus_mode = 0

[node name="Mainproject" type="Node2D" parent="." index="2"]
__meta__ = {
"_edit_lock_": true
}

[node name="TextEdit" type="LineEdit" parent="Mainproject" index="0"]
margin_left = 15.0
margin_top = 240.0
margin_right = 705.0
margin_bottom = 299.0
rect_rotation = -0.211378
theme = ExtResource( 7 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
align = 1
max_length = 25
context_menu_enabled = false
placeholder_text = "Enter text."
caret_blink = true
__meta__ = {
"_edit_lock_": true
}

[node name="Gestures" type="GridContainer" parent="Mainproject" index="1"]
margin_top = 675.0
margin_right = 720.0
margin_bottom = 1395.0
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 4
[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer/Jojo_translate1" to="." method="_on_Jojo_translate1_pressed"]
[connection signal="pressed" from="CenterContainer/Jojo_reset1" to="." method="_on_Jojo_reset1_pressed"]
[connection signal="text_entered" from="Mainproject/TextEdit" to="." method="_on_TextEdit_text_entered"]
